welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:28: error: ':' expected but '.' found.
def isFacingTrail(c.Color):Boolean = {
                   ^SlugSnail:45: error: identifier expected but '}' found.
}
^